--- a/welcome/overview.mdx
+++ b/welcome/overview.mdx
@@ -2,21 +2,18 @@
 title: Overview
 ---
 
-<div align="center">
-  <h1>Flagship Results @ Mini Cost 🚀</h1>
-  <p style="font-size: 1.2em; margin: 1em 0;">
-    <strong>The Data Layer for AI Agents</strong><br/>
-    Precision retrieval delivers 70% smaller context — only relevant chunks, zero noise
-  </p>
-</div>
+<p style={{fontSize: '1.2em', margin: '1em 0'}}>
+  <strong>The Data Layer for AI Agents</strong><br/>
+  Precision retrieval get 70% smaller context — only relevant chunks, zero noise
+</p>
 
 <CardGroup cols={3}>
   <Card icon="chart-line" color="#16a34a">
     **80% COST REDUCTION**
     Process 10x more requests with intelligent retrieval
   </Card>
-  <Card icon="target" color="#0285c7">
-    **99.5% ACCURACY MATCH**
+  <Card icon="bullseye" color="#0285c7">
+    **99.5% ACCURACY**
     Flagship model quality at mini model cost
   </Card>
   <Card icon="rocket" color="#ea5a0c">
